# gemma-local-expert

./: .gitignore  CONTRIBUTING.md  README.md  gemma-local-agent-architecture.md  gemma-local-expert-research-synthesis-2026-04-17.md  offline-field-assistant-v1-product-spec.md  offline-field-assistant-v1-technical-architecture.md  pyproject.toml
apps/apple-shell/: README.md
apps/desktop-macos/: README.md
apps/web-chat/: README.md  app.js  index.html  styles.css
contracts/events/: conversation-stream-event.schema.json
data/: README.md
docs/: codex-alignment-tracker.md  codex-architecture-learnings.md  competitive-roadblocks-research-2026-04-23.md  live-real-multimodal-eval-2026-04-20.md  live-real-multimodal-eval-with-doc-2026-04-20.md  repo-plan.md
engine/: __init__.py
engine/api/: app.py  (+1 more)
evals/: README.md
scripts/: check_full_local_tracking.py  eval_live_real_multimodal.py  export_openapi.py  generate_test_assets.py  live_browser_friend_turns_check.scenario.js  live_browser_friend_turns_check.sh  migrate.py  run_full_local_server.sh  run_local_eval.py  run_low_memory_server.sh  smoke_asset_turn.py  smoke_chat.py  smoke_deep_conversation.py  smoke_long_horizon_memory.py  smoke_retrieval.py  smoke_thread_state_protocol.py  smoke_tool_approval.py  smoke_workspace_agent.py
tests/: test_agent.py  test_app.py  test_chunking.py  test_context.py  test_document.py  test_memory.py  test_model_sources.py  test_orchestrator.py  test_persistence.py  test_prompting.py  test_retrieval.py  test_router.py  test_runtime.py  test_tools.py  test_video.py  test_vision.py
(+77 files in other folders)
