[project]
name = "field-assistant-engine"
version = "0.1.0"
description = "Local-first engine scaffold for an offline Gemma field assistant."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "mlx>=0.31.1",
  "mlx-embeddings>=0.1.0",
  "mlx-lm>=0.31.2",
  "pillow>=11.2,<12.0",
  "pydantic>=2.11,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn>=0.35,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*"]
